--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./blocky.yaml
   - ./node-exporter.yaml
   - ./ntp-nodes.yaml
   - ./smartctl-exporter.yaml
