feat(kps): Update scrapeconfig

--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
+        - utility.greyrock.io:9100
         - pikvm.greyrock.io:9100
   metricsPath: /metrics
   relabelings:
