feat(kps): Update scrapeconfigs

--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/addons/scrapeconfigs/node-exporter.yaml
@@ -7,8 +7,9 @@ metadata:
 spec:
   staticConfigs:
     - targets:
-        - utility.greyrock.io:9100
+        - nas.greyrock.io:9100
         - pikvm.greyrock.io:9100
+        - utility.greyrock.io:9100
   metricsPath: /metrics
   relabelings:
     - action: replace
