fix(loki): Allow https for s3

--- a/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
@@ -88,7 +88,7 @@ spec:
           admin: loki-admin
         s3:
           s3ForcePathStyle: true
-          insecure: true
+          insecure: false
 
     gateway:
       replicas: 3
