fix(exteranal-secrets): OP over HTTPS

--- a/kubernetes/main/apps/security/external-secrets/stores/onepassword/clustersecretstore.yaml
+++ b/kubernetes/main/apps/security/external-secrets/stores/onepassword/clustersecretstore.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword-connect.greyrock.casa:8080
+      connectHost: https://onepassword-connect.greyrock.casa
       vaults:
         Automation: 1
         Services: 2
