feat(openebs): Migrate to new chart

--- a/kubernetes/main/flux/repositories/helm/openebs.yaml
+++ b/kubernetes/main/flux/repositories/helm/openebs.yaml
@@ -7,5 +7,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://openebs.github.io/charts
+  url: https://openebs.github.io/openebs
   timeout: 3m
