--- a/kubernetes/main/apps/home-automation/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/mosquitto/app/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "mqtt.greyrock.casa."
           io.cilium/lb-ipam-ips: 10.1.1.135
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
         ports:
           mqtt:
             enabled: true
