feat(vector): Expose syslog endpoint

--- a/kubernetes/main/apps/monitoring/vector/aggregator/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/vector/aggregator/helmrelease.yaml
@@ -79,10 +79,9 @@ spec:
             port: 8686
           kubernetes-logs:
             port: 6000
-          vyos-syslog:
+          syslog-udp:
             port: 6001
-          journald-logs:
-            port: 6002
+            protocol: UDP
 
     persistence:
       config:
