feat(taskfile): Default to main cluster

--- a/.taskfiles/k8s/Taskfile.yaml
+++ b/.taskfiles/k8s/Taskfile.yaml
@@ -7,9 +7,9 @@ tasks:
     desc: Deletes pods with Failed phase
     summary: |
       Args:
-        cluster: Cluster to run command against (required)
+        cluster: Cluster to run command against (default: main)
     vars:
-      cluster: '{{ or .cluster (fail "Argument (cluster) is required") }}'
+      cluster: '{{.cluster | default "main"}}'
     cmds:
       - kubectl --context {{.cluster}} delete pods --field-selector status.phase=Failed -A --ignore-not-found=true
 
@@ -17,9 +17,9 @@ tasks:
     desc: Deletes pods with Succeeded phase
     summary: |
       Args:
-        cluster: Cluster to run command against (required)
+        cluster: Cluster to run command against (default: main)
     vars:
-      cluster: '{{ or .cluster (fail "Argument (cluster) is required") }}'
+      cluster: '{{.cluster | default "main"}}'
     cmds:
       - kubectl --context {{.cluster}} delete pods --field-selector status.phase=Succeeded -A --ignore-not-found=true
 
@@ -27,8 +27,8 @@ tasks:
     desc: Deletes pods with Pending phase
     summary: |
       Args:
-        cluster: Cluster to run command against (required)
+        cluster: Cluster to run command against (default: main)
     vars:
-      cluster: '{{ or .cluster (fail "Argument (cluster) is required") }}'
+      cluster: '{{.cluster | default "main"}}'
     cmds:
       - kubectl --context {{.cluster}} delete pods --field-selector status.phase=Pending -A --ignore-not-found=true
