--- a/.taskfiles/externalsecrets/Taskfile.yaml
+++ b/.taskfiles/externalsecrets/Taskfile.yaml
@@ -7,14 +7,14 @@ tasks:
     desc: Sync ExternalSecret resources
     summary: |
       Args:
-        cluster: Cluster to run command against (required)
+        cluster: Cluster to run command against (default: main)
         ns: Namespace the PVC is in (default: default)
         secret: ExternalSecret to sync (required)
     silent: true
     vars:
       secret: "{{ .secret }}"
       ns: '{{.ns | default "default"}}'
-      cluster: '{{ or .cluster (fail "Argument (cluster) is required") }}'
+      cluster: '{{.cluster | default "main"}}'
     cmd: kubectl --context {{.cluster}} -n {{.ns}} annotate externalsecret.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
     preconditions:
       - sh: kubectl --context {{.cluster}} -n {{.ns}} get es {{.secret}}
