--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -15,75 +15,66 @@ spec:
         name: rook-ceph
         namespace: flux-system
   values:
-    toolbox:
-      enabled: false
-
     monitoring:
       enabled: true
       createPrometheusRules: true
-
+    ingress:
+      dashboard:
+        ingressClassName: "internal-nginx"
+        host:
+          name: &host rook-main.greyrock.casa
+          path: "/"
+        tls:
+          - hosts:
+              - *host
+    toolbox:
+      enabled: false
     configOverride: |
       [global]
       bdev_enable_discard = true
       bdev_async_discard = true
-
+      osd_class_update_on_start = false
     cephClusterSpec:
-      network:
-        provider: host
-
-      resources:
-        mgr:
-          requests:
-            cpu: "125m"
-            memory: "512Mi"
-          limits:
-            memory: "2Gi"
-        mon:
-          requests:
-            cpu: "49m"
-            memory: "512Mi"
-          limits:
-            memory: "1Gi"
-        osd:
-          requests:
-            cpu: "442m"
-            memory: "2Gi"
-          limits:
-            memory: "6Gi"
-        mgr-sidecar:
-          requests:
-            cpu: "49m"
-            memory: "128Mi"
-          limits:
-            memory: "256Mi"
-        crashcollector:
-          requests:
-            cpu: "15m"
-            memory: "64Mi"
-          limits:
-            memory: "64Mi"
-        logcollector:
-          requests:
-            cpu: "100m"
-            memory: "100Mi"
-          limits:
-            memory: "1Gi"
-        cleanup:
-          requests:
-            cpu: "250m"
-            memory: "100Mi"
-          limits:
-            memory: "1Gi"
-
       crashCollector:
         disable: false
-
       dashboard:
         enabled: true
         urlPrefix: /
         ssl: false
         prometheusEndpoint: http://thanos-query-frontend.monitoring.svc.cluster.local:10902
-
+      mgr:
+        modules:
+          - name: pg_autoscaler
+            enabled: true
+      network:
+        provider: host
+        connections:
+          requireMsgr2: true
+      resources:
+        mgr:
+          requests:
+            cpu: 100m
+            memory: 512Mi
+          limits:
+            memory: 2Gi
+        mon:
+          requests:
+            cpu: 50m
+            memory: 512Mi
+          limits:
+            memory: 1Gi
+        osd:
+          requests:
+            cpu: 500m
+            memory: 2Gi
+          limits:
+            memory: 6Gi
+        mgr-sidecar:
+          requests:
+            cpu: 50m
+            memory: 128Mi
+          limits:
+            memory: 256Mi
       storage:
         useAllNodes: false
         useAllDevices: false
@@ -100,20 +91,6 @@ spec:
             devices:
               - name: "/dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_22472N805186"
 
-    ingress:
-      dashboard:
-        ingressClassName: "internal-nginx"
-        annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/instance: "todd"
-          hajimari.io/icon: "mdi:plex"
-        host:
-          name: &host rook-main.greyrock.casa
-          path: "/"
-        tls:
-          - hosts:
-              - *host
-
     cephBlockPools:
       - name: ceph-blockpool
         spec:
@@ -126,6 +103,7 @@ spec:
           isDefault: true
           reclaimPolicy: Delete
           allowVolumeExpansion: true
+          volumeBindingMode: Immediate
           parameters:
             imageFormat: "2"
             imageFeatures: layering
@@ -136,13 +114,11 @@ spec:
             csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4
-
     cephBlockPoolsVolumeSnapshotClass:
       enabled: true
       name: csi-ceph-blockpool
       isDefault: false
       deletionPolicy: Delete
-
     cephFileSystems:
       - name: ceph-filesystem
         spec:
@@ -153,22 +129,24 @@ spec:
             - failureDomain: host
               replicated:
                 size: 3
+              name: data0
           metadataServer:
             activeCount: 1
             activeStandby: true
+            priorityClassName: system-cluster-critical
             resources:
               requests:
-                cpu: "35m"
-                memory: "1Gi"
+                cpu: 100m
+                memory: 1Gi
               limits:
-                memory: "3Gi"
+                memory: 3Gi
         storageClass:
           enabled: true
           isDefault: false
           name: ceph-filesystem
           reclaimPolicy: Delete
           allowVolumeExpansion: true
-          mountOptions: []
+          volumeBindingMode: Immediate
           parameters:
             csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
             csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
@@ -177,41 +155,9 @@ spec:
             csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4
-
     cephFileSystemVolumeSnapshotClass:
       enabled: true
       name: csi-ceph-filesystem
       isDefault: false
       deletionPolicy: Delete
-
-    cephObjectStores:
-      - name: ceph-objectstore
-        spec:
-          metadataPool:
-            failureDomain: host
-            replicated:
-              size: 3
-          dataPool:
-            failureDomain: host
-            erasureCoded:
-              dataChunks: 2
-              codingChunks: 1
-          preservePoolsOnDelete: true
-          gateway:
-            port: 80
-            resources:
-              requests:
-                cpu: 100m
-                memory: 256Mi
-              limits:
-                memory: 2Gi
-            instances: 1
-          healthCheck:
-            bucket:
-              interval: 60s
-        storageClass:
-          enabled: true
-          name: ceph-bucket
-          reclaimPolicy: Delete
-          parameters:
-            region: us-east-1
+    cephObjectStores: []
