--- a/kubernetes/main/apps/rook-ceph/rook-ceph/operator/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/operator/helmrelease.yaml
@@ -18,128 +18,15 @@ spec:
   values:
     crds:
       enabled: true
-
     csi:
-      provisioner:
-        image: registry.k8s.io/sig-storage/csi-provisioner:v4.0.1
-      csiAddons:
-        enabled: false
-
+      cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
       serviceMonitor:
         enabled: true
-
-      kubeletDirPath: /var/lib/kubelet
-      enableCSIHostNetwork: true
-      pluginTolerations:
-        - effect: "NoExecute"
-          operator: "Exists"
-        - effect: "NoSchedule"
-          operator: "Exists"
-
-      csiRBDProvisionerResource: |
-        - name : csi-provisioner
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-resizer
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-attacher
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-snapshotter
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-rbdplugin
-          resource:
-            requests:
-              memory: 512Mi
-              cpu: 50m
-            limits:
-              memory: 1Gi
-        - name : csi-omap-generator
-          resource:
-            requests:
-              memory: 512Mi
-              cpu: 50m
-            limits:
-              memory: 1Gi
-        - name : liveness-prometheus
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-
-      csiCephFSProvisionerResource: |
-        - name : csi-provisioner
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-resizer
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-attacher
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-snapshotter
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-        - name : csi-cephfsplugin
-          resource:
-            requests:
-              memory: 512Mi
-              cpu: 50m
-            limits:
-              memory: 1Gi
-        - name : liveness-prometheus
-          resource:
-            requests:
-              memory: 128Mi
-              cpu: 25m
-            limits:
-              memory: 256Mi
-
     monitoring:
       enabled: true
-
-    pspEnable: false
-
     resources:
       requests:
-        cpu: 109m
-        memory: 204M
-      limits:
-        memory: 453M
+        memory: 128Mi # unchangable
+        cpu: 100m # unchangable
+      limits: {}
