--- a/kubernetes/main/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/main/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -17,7 +17,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-kubernetes
+    name: greyrock-ops-kubernetes
   wait: true
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
@@ -38,7 +38,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-kubernetes
+    name: greyrock-ops-kubernetes
   wait: false
   dependsOn:
     - name: system-upgrade-controller
