--- a/kubernetes/main/apps/monitoring/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kustomization.yaml
@@ -11,10 +11,10 @@ resources:
   - ./grafana/ks.yaml
   - ./hs110-exporter-rack/ks.yaml
   - ./kromgo/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
   - ./loki/ks.yaml
+  - ./prometheus-operator/ks.yaml
   - ./node-exporter/ks.yaml
   - ./silence-operator/ks.yaml
-  - ./thanos/ks.yaml
   - ./unpoller/ks.yaml
   - ./vector/ks.yaml
+  - ./victoria-metrics/ks.yaml
