--- a/kubernetes/main/apps/monitoring/loki/ks.yaml
+++ b/kubernetes/main/apps/monitoring/loki/ks.yaml
@@ -18,6 +18,6 @@ spec:
     name: greyrock-ops-kubernetes
   wait: true
   dependsOn:
-    - name: kube-prometheus-stack
+    - name: prometheus-operator-crds
     - name: external-secrets-stores
     - name: openebs
