--- a/kubernetes/main/apps/monitoring/node-exporter/ks.yaml
+++ b/kubernetes/main/apps/monitoring/node-exporter/ks.yaml
@@ -18,4 +18,4 @@ spec:
     name: greyrock-ops-kubernetes
   wait: false
   dependsOn:
-    - name: kube-prometheus-stack
+    - name: prometheus-operator-crds
