fix(cloudflared): Fix externalSecret

--- a/kubernetes/main/apps/network/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/main/apps/network/cloudflared/app/externalsecret.yaml
@@ -21,10 +21,16 @@ spec:
             "TunnelID": "{{ .cloudflare_tunnel_id }}"
           }
         TunnelID: "{{ .cloudflare_tunnel_id }}"
-  dataFrom:
-    - extract:
+  data:
+    - secretKey: cloudflare_tunnel_account_tag
+      remoteRef:
         key: Cloudflare
-      rewrite:
-        - regexp:
-            source: "(.*)"
-            target: "cloudflare_$1"
+        property: tunnel_account_tag
+    - secretKey: cloudflare_tunnel_secret
+      remoteRef:
+        key: Cloudflare
+        property: tunnel_secret
+    - secretKey: cloudflare_tunnel_id
+      remoteRef:
+        key: Cloudflare
+        property: tunnel_id
