fix(vm): More VM fun

--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -78,15 +78,15 @@ spec:
 
     dashboards:
       default:
-        # blocky:
-        #   # renovate: dashboardName="blocky"
-        #   gnetId: 13768
-        #   revision: 3
-        #   datasource:
-        #     - name: "DS_PROMETHEUS"
-        #       value: Prometheus
-        #     - name: "VAR_BLOCKY_URL"
-        #       value: 'http:\\/\\/10.1.1.11:4000'
+        blocky:
+          # renovate: dashboardName="blocky"
+          gnetId: 13768
+          revision: 3
+          datasource:
+            - name: "DS_PROMETHEUS"
+              value: Prometheus
+            - name: "VAR_BLOCKY_URL"
+              value: 'http:\\/\\/10.1.1.11:4000'
 
         cert-manager:
           url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
