--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -191,6 +191,9 @@ spec:
     # Enable deployment of grafana
     grafana:
       enabled: false
+      sidecar:
+        dashboards:
+          label: grafana_dashboard
 
     # Enable deployment of alertmanager
     alertmanager:
