--- a/kubernetes/main/flux/config/flux.yaml
+++ b/kubernetes/main/flux/config/flux.yaml
@@ -26,6 +26,17 @@ spec:
     kind: OCIRepository
     name: flux-manifests
   patches:
+    # Remove the network policies
+    - patch: |
+        $patch: delete
+        apiVersion: networking.k8s.io/v1
+        kind: NetworkPolicy
+        metadata:
+          name: not-used
+      target:
+        group: networking.k8s.io
+        kind: NetworkPolicy
+
     # Increase the number of reconciliations that can be performed in parallel and bump the resources limits
     # https://fluxcd.io/flux/cheatsheets/bootstrap/#increase-the-number-of-workers
     - patch: |
