fix(plex): Clean up cache periodically

--- a/kubernetes/main/apps/media/plex/plex-image-cleanup/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/plex-image-cleanup/helmrelease.yaml
@@ -90,3 +90,9 @@ spec:
           plex-image-cleanup:
             app:
               - path: /data/plex_config
+      plex-cache:
+        existingClaim: plex-cache
+        advancedMounts:
+          plex:
+            app:
+              - path: /data/plex_config/Library/Application Support/Plex Media Server/Cache
