fix(grafana): Dashboards

--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -189,11 +189,9 @@ spec:
       enabled: false
 
     # Enable deployment of grafana
+    defaultDashboardsEnabled: false
     grafana:
       enabled: false
-      sidecar:
-        dashboards:
-          label: grafana_dashboard
 
     # Enable deployment of alertmanager
     alertmanager:
