--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -75,6 +75,14 @@ spec:
               path: /var/lib/grafana/dashboards/unpoller
             orgId: 1
             type: file
+          - name: victoriametrics
+            disableDeletion: false
+            editable: true
+            folder: "VictoriaMetrics"
+            options:
+              path: /var/lib/grafana/dashboards/victoria-metrics
+            orgId: 1
+            type: file
 
     dashboards:
       default:
@@ -227,6 +235,35 @@ spec:
           datasource:
             - name: "DS_PROMETHEUS"
               value: Prometheus
+      victoriametrics:
+        vm-cluster:
+          # renovate: dashboardName="VictoriaMetrics - cluster"
+          gnetId: 11176
+          revision: 36
+          datasource:
+            - name: "DS_PROMETHEUS"
+              value: Prometheus
+        vm-operator:
+          # renovate: dashboardName="VictoriaMetrics - operator"
+          gnetId: 17869
+          revision: 2
+          datasource:
+            - name: "DS_PROMETHEUS"
+              value: Prometheus
+        vm-vmalert:
+          # renovate: dashboardName="VictoriaMetrics - vmalert"
+          gnetId: 14950
+          revision: 10
+          datasource:
+            - name: "DS_PROMETHEUS"
+              value: Prometheus
+        vm-vmagent:
+          # renovate: dashboardName="VictoriaMetrics - vmagent"
+          gnetId: 12683
+          revision: 17
+          datasource:
+            - name: "DS_PROMETHEUS"
+              value: Prometheus
 
     datasources:
       datasources.yaml:
@@ -256,8 +293,6 @@ spec:
           - name: Prometheus
             orgId: 1
           - name: Loki
-            orgId: 1
-          - name: Victoria-Metrics
             orgId: 1
 
     env:
