--- a/kubernetes/main/apps/monitoring/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./grafana/ks.yaml
   - ./hs110-exporter-rack/ks.yaml
   - ./kromgo/ks.yaml
+  - ./kube-state-metrics/ks.yaml
   - ./loki/ks.yaml
   - ./prometheus-operator/ks.yaml
   - ./node-exporter/ks.yaml
