fix(pic): Sloppy pasta

--- a/kubernetes/main/apps/media/plex/plex-image-cleanup/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/plex-image-cleanup/helmrelease.yaml
@@ -93,6 +93,6 @@ spec:
       plex-cache:
         existingClaim: plex-cache
         advancedMounts:
-          plex:
+          plex-image-cleanup:
             app:
               - path: /data/plex_config/Library/Application Support/Plex Media Server/Cache
